# ApexHunter

./: LICENSE  README.md  agentic_discovery_report.md  agentic_report.md  dashboard.py  pyproject.toml  ransomware_beacon_hunt_report.md  report.md  requirements.txt
apexhunter/: __init__.py  banner.py  cli.py  engine.py  enricher.py  executor.py  llm.py  loader.py  parser.py  reporter.py  utils.py
bakend/Regstration/: pom.xml
bakend/Regstration/Regstration/src/test/java/com/example/Regstration/: RegstrationApplicationTests.java
bakend/Regstration/src/main/java/com/example/Regstration/: RegstrationApplication.java
bakend/Regstration/src/main/java/com/example/Regstration/model/: Studnet.java
bakend/Regstration/src/main/java/com/example/Regstration/model/enums/: Gender.java
bakend/Regstration/src/main/resources/: application.properties
forntend/: README.md  angular.json  package-lock.json  package.json
forntend/src/app/: app.ts
intel/: blacklist.csv
playbooks/: agentic_discovery.yaml  ghost_admin_hunt.yaml  ransomware_beacon_hunt.yaml
sample_logs/: dns_events.csv  security_logs.csv  sysmon_logs.csv
tests/: test_executor.py  test_parser.py
